[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cre-agentprotect"
version = "0.1.0"
description = "Policy enforcement subscriber for HookBus. Thin adapter to Microsoft Agent Governance Toolkit (AGT)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Agentic Thinking Ltd", email = "contact@agenticthinking.uk"},
]
keywords = ["hookbus", "agt", "agent-governance", "ai-safety", "policy-enforcement"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Development Status :: 4 - Beta",
]
dependencies = [
  "agent-governance-toolkit>=0.1.0",
]

[project.urls]
Homepage = "https://agenticthinking.uk"
Repository = "https://github.com/agentic-thinking/cre-agentprotect"
"Bug Tracker" = "https://github.com/agentic-thinking/cre-agentprotect/issues"

[tool.setuptools]
py-modules = ["cre_agentprotect"]
